# Pugs.hs

./: HACKING  INSTALL  README  README.mkdn  index.html  install-haskell-platform-ghc7-and-pugs-on-debian-or-ubuntu-from-scratch.sh
HsParrot/: Changes  HsParrot.cabal  LICENSE
HsParrot/src/Language/: PIR.hs
HsParrot/src/Language/PIR/: Emit.hs
HsPerl5/: Configure.PL  HsPerl5.cabal  LICENSE  README  p5embed.c  p5embed.h  test.hs
HsPerl5/src/Language/: Perl5.hs
HsSyck/: Changes  HsSyck.cabal
HsSyck/Data/Yaml/: Syck.hsc
HsSyck/syck/: gram.c  syck_st.c
MetaObject/: LICENSE  MetaObject.cabal  README
MetaObject/examples/: si.hs
MetaObject/src/MO/: Base.hs  Capture.hs  Compile.hs  Run.hs  Run.hs-boot  Util.hs
MetaObject/src/MO/Compile/: Attribute.hs  Class.hs  Role.hs
MetaObject/src/MO/Util/: C3.hs
Pugs/: Configure.PL  Makefile  Pugs.cabal  Setup.lhs
Pugs/src/: Pugs.hs
Pugs/src/Pugs/: AST.hs  Class.hs  CodeGen.hs  Compile.hs  Config.hs  Eval.hs  Internals.hs  Lexer.hs  Monads.hs  Parser.hs  Prim.hs  Run.hs  Types.hs  Version.hs
Pugs/src/Pugs/AST/: Eval.hs  Functions.hs  Internals.hs  Pad.hs  SIO.hs  Types.hs  Utils.hs
Pugs/src/Pugs/AST/Internals/: Instances.hs
Pugs/src/Pugs/Compile/: Pugs.hs
Pugs/src/Pugs/Embed/: Parrot.hs  Perl5.hs
Pugs/src/Pugs/Eval/: Var.hs
Pugs/src/Pugs/Meta/: Perl5.hs
Pugs/src/Pugs/Parser/: Literal.hs  Operator.hs  Program.hs  Types.hs  Unsafe.hs  Util.hs
Pugs/src/Pugs/Prim/: Eval.hs  Keyed.hs  Match.hs  Numeric.hs  Yaml.hs
Pugs/src/Pugs/Types/: Array.hs
Pugs/src/Pugs/Val/: Code.hs
pugs-DrIFT/: AUTHORS  ChangeLog  LICENSE  README  README.old  Setup.hs  drift-ghc.in  pugs-DrIFT.cabal
pugs-DrIFT/src/: ChaseImports.hs  CommandP.hs  DataP.lhs  DrIFT.hs  GenUtil.hs  GetOpt.hs  ParseLib2.hs  PreludData.hs  Pretty.lhs  RuleUtils.hs  Rules.hs  Unlit.hs  Version.hs
pugs-DrIFT/src/DrIFT/: JSON.hs  Perl5.hs  Perl6Class.hs  YAML.hs
pugs-DrIFT/src/Rules/: JSON.hs  Perl5.hs  Perl6Class.hs  YAML.hs
pugs-compat/: pugs-compat.cabal
pugs-compat/src/Pugs/: Compat.hs
pugs-compat/src/Pugs/Compat/: Cast.hs  Global.hs  ID.hs  Monads.hs  Posix.hs  Regex.hs  String.hs
