Name:                HsParrot
Version:             0.0.2
Category:            Language, Pugs
Synopsis:            Haskell integration with Parrot virtual machine
Description:         Haskell integration with Parrot virtual machine

-- License is really "MIT", but Cabal doesn't have that constant yet
License:             BSD3
License-File:        LICENSE
Author:              Audrey Tang
Maintainer:          audreyt@audreyt.org
Copyright:           Audrey Tang, 2008

Exposed-modules:     Language.PIR
Other-modules:       Language.PIR.Emit

Build-Depends:       base, haskell98, bytestring>=0.9.0.1, pretty, HsSyck,
                     pugs-DrIFT
Build-Type:          Simple
Tested-With:         GHC==6.8.2, GHC==6.8.3

Extensions:          TypeSynonymInstances, OverlappingInstances,
                     ExistentialQuantification, MultiParamTypeClasses,
                     DeriveDataTypeable, FlexibleInstances, Rank2Types,
                     PatternGuards

-- ghc-options:         -F -pgmF pugs-DrIFT -optF-pgmF
data-files:          Changes
hs-source-dirs:      src

