Name:                HsParrot
Version:             0.0.2.20110925
Category:            Language, Pugs
Synopsis:            Haskell integration with Parrot virtual machine
Description:         Haskell integration with Parrot virtual machine

-- License is really "MIT", but Cabal doesn't have that constant yet
License:             BSD3
License-File:        LICENSE
Author:              Audrey Tang
Maintainer:          audreyt@audreyt.org
Copyright:           Audrey Tang, 2008

Build-Type:          Simple
Tested-With:         GHC==6.8.2, GHC==6.8.3

cabal-version:       >= 1.2.3
-- ghc-options:         -F -pgmF pugs-DrIFT -optF-pgmF
data-files:          Changes

Library
    Extensions:          TypeSynonymInstances, OverlappingInstances,
                         ExistentialQuantification, MultiParamTypeClasses,
                         DeriveDataTypeable, FlexibleInstances, Rank2Types,
                         PatternGuards
    hs-source-dirs:      src
    Build-Depends:       base > 4 && < 5, bytestring>=0.9.0.1, pretty, HsSyck,
                         pugs-DrIFT
    Exposed-modules:     Language.PIR
    Other-modules:       Language.PIR.Emit

