Name:                HsSyck
Version:             0.50
Cabal-version:       >= 1.2.3
Category:            Text, Pugs
Synopsis:            Fast, lightweight YAML loader and dumper
Description:         This is a simple YAML ('Yet Another Markup Language') processor,
                     used by the Pugs project for handling data serialization; this can be
                     useful for optimization and caching purposes.
                     .
                     This is an interface to the @syck@ C library for parsing and
                     dumping YAML data. It lets you transform textual YAML data into an
                     object of type 'YamlNode', and vice versa, fast.

-- License is really "MIT", but Cabal doesn't have that constant yet
License:             BSD3
License-File:        LICENSE
Author:              Audrey Tang
Maintainer:          audreyt@audreyt.org
Copyright:           Audrey Tang, Gaal Yahas, 2005, 2006, 2007, 2008, 2009

Build-Type:          Simple
Tested-With:         GHC==6.8.2, GHC==6.8.3, GHC==6.10.1, GHC==6.10.2
Data-Files:          Changes
Extra-Source-Files:  syck/syck.h syck/syck_st.h syck/gram.h syck/yamlbyte.h

Flag SybInBase
    Description: syb was split from base >= 4
    Default: False

Library
    if flag(SybInBase)
        Build-Depends: base>=3 && <4, bytestring>=0.9.0.1, utf8-string>=0.3
    else
        Build-Depends: base>=4 && <6, bytestring>=0.9.0.1, syb, utf8-string>=0.3

    exposed-modules: Data.Yaml.Syck

    ghc-options: -funbox-strict-fields

    extensions: ForeignFunctionInterface, MagicHash,
                DeriveDataTypeable, TypeSynonymInstances, PatternGuards, RecursiveDo

    c-sources: syck/bytecode.c syck/emitter.c syck/gram.c syck/handler.c
               syck/implicit.c syck/node.c syck/syck.c syck/syck_st.c
               syck/token.c syck/yaml2byte.c
    include-dirs:        syck
