name:                pugs-DrIFT
version:             2.2.3.20110925
synopsis:            DrIFT with pugs-specific rules.
description:         DrIFT is a type sensitive preprocessor for Haskell. It extracts type declarations
                     and directives from modules. The directives cause rules to be fired on the parsed
                     type declarations, generating new code which is then appended to the bottom of the input
                     file. The rules are expressed as Haskell code, and it is intended that the user can add new
                     rules as required.
                     DrIFT automates instance derivation for classes that aren't supported by the standard compilers.
                     In addition, instances can be produced in seperate modules to that containing the type declaration.
                     This allows instances to be derived for a type after the original module has been compiled.
                     As a bonus, simple utility functions can also be produced from a type.
category:            Pugs
cabal-version:       >= 1.2.3
license:             BSD3
license-file:        LICENSE
-- For contributors & what they did, see AUTHORS
author:              Noel Winstanley
maintainer:          Audrey Tang <audreyt@audreyt.org>
homepage:            http://pugscode.org/
build-type:          Simple
data-files:          AUTHORS, ChangeLog, README, README.old
                     -- , PArr
extra-source-files:
        src/CommandP.hs, src/GenUtil.hs,
        src/DrIFT.hs, src/PreludData.hs src/Rules.hs, src/ParseLib2.hs,
        src/Version.hs, src/DataP.lhs src/ChaseImports.hs, src/Pretty.lhs,
        src/RuleUtils.hs, src/Unlit.hs, src/GetOpt.hs, drift-ghc.in,

        src/Rules/JSON.hs,
        src/Rules/Perl5.hs,
        src/Rules/Perl6Class.hs,
        src/Rules/YAML.hs

executable          pugs-DrIFT
    build-depends:       base >= 4 && < 5, old-time, random, bytestring, utf8-string, pretty, containers, mtl < 2.0.0.0, stm, HsSyck
    main-is:             DrIFT.hs
    -- ghc-options:         -fparr
    hs-source-dirs:      src
    extensions:          ParallelListComp, ScopedTypeVariables,
                         ImplicitParams, MagicHash, TypeSynonymInstances,
                         OverlappingInstances, FlexibleContexts,
                         UndecidableInstances, FlexibleInstances,
                         IncoherentInstances

library
    build-depends:       base >= 4 && < 5, old-time, random, bytestring, utf8-string, pretty, containers, mtl < 2.0.0.0, stm, HsSyck
    hs-source-dirs:      src
    -- ghc-options:         -fparr
    extensions:          ParallelListComp, ScopedTypeVariables,
                         ImplicitParams, MagicHash, TypeSynonymInstances,
                         OverlappingInstances, FlexibleContexts,
                         UndecidableInstances, FlexibleInstances,
                         IncoherentInstances
    exposed-modules:     DrIFT.JSON
                         DrIFT.Perl5
                         DrIFT.Perl6Class
                         DrIFT.YAML
