Name           : pugs-compat
Version        : 0.0.6.20120203
Build-type     : Simple
Category       : Pugs
License        : BSD3
License-file   : LICENSE
Maintainer     : audreyt@audreyt.org
Synopsis       : Portable Haskell/POSIX layer for Pugs
Description    : Portable Haskell/POSIX layer for Pugs
Cabal-Version  : >=1.2.3

Tested-With:       GHC==6.8.2, GHC==6.8.3, GHC==6.10.1, GHC==6.12.1, GHC==7.4.1

Library
  Extensions      : CPP, MagicHash, ScopedTypeVariables, MultiParamTypeClasses,
                    TypeSynonymInstances, FlexibleInstances, PatternGuards,
                    UndecidableInstances, FlexibleContexts, OverlappingInstances, TypeOperators

  Build-depends   : base >=4 && < 5, time, directory, process, regex-pcre-builtin, regex-base,
                    random, network, containers, bytestring, array, mtl < 2.0.0.0, stm, utf8-string, syb,
                    stringtable-atom >= 0.0.6.1
  Exposed-modules : Pugs.Compat
  Other-modules   : Pugs.Compat.Cast Pugs.Compat.Global Pugs.Compat.ID
                    Pugs.Compat.Monads Pugs.Compat.Posix Pugs.Compat.String
                    Pugs.Compat.Regex

  if impl(ghc >= 6.10)
      Ghc-Options   : -Wall

  if impl(ghc < 6.10)
      Ghc-Options   : -fparr -Wall

  Hs-source-dirs  : src

  if os(windows)
    Extensions    : GeneralizedNewtypeDeriving, ForeignFunctionInterface, DeriveDataTypeable
  else
    Build-depends : unix
    Extensions    : ForeignFunctionInterface
    CPP-options   : -DPUGS_HAVE_POSIX
